--- a/TAISEN.csproj
+++ b/TAISEN.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <FileVersion>2.2.0-beta</FileVersion>
+    <FileVersion>2.3.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
